--- a/employers.html
+++ b/employers.html
@@ -35,16 +35,17 @@
                         <span>
                             <img class="drp_dwn" src="	https://static.naukimg.com/s/5/114/i/dropdwon_grey.png" alt="">
                         </span>
-                        <ul id="drp_dwn_prod">
-                            <li>Products On Offer (Buy Online)</li>
-                            <li>Resume Database Access (RESDEX)</li>
-                            <li>Job Posting</li>
-                            <li>Recruitment Management System (RMS)</li>
-                            <li>Referral Solutions</li>
-                            <li>Branding Solutions</li>
-                        </ul>
                     </h4>
+                    <ul id="drp_dwn_prod">
+                        <li>Products On Offer (Buy Online)</li>
+                        <li>Resume Database Access (RESDEX)</li>
+                        <li>Job Posting</li>
+                        <li>Recruitment Management System (RMS)</li>
+                        <li>Referral Solutions</li>
+                        <li>Branding Solutions</li>
+                    </ul>
                 </div>
+              
             </div>
             <div id="_nav_right">
                 <div id="tollfree">
@@ -94,9 +95,61 @@
 
 
     <!-- first viwe content -->
-<section>
-    
-</section>
+    <section class="_sec  _first">
+        <div id="_f_s_left">
+            <h4 class="__top_head">
+                NAUKRI HIRING SUITE FOR EMPLOYERS
+            </h4>
+            <h2 class="__mid_head">
+                From Campus to Senior Level Hiring
+            </h2>
+            <h3 class="__btm_head">
+                Bouquet of solutions to meet all your hiring needs
+            </h3>
+            <div class="under_line"></div>
+            <div class="_spans">
+                <span>naukri</span>
+                <span>iimjobs</span>
+                <span>hirist</span>
+                <span>Firstnaukri</span>
+                <span>zwayam</span>
+                <span>doselect</span>
+                <span>eHire</span>
+            </div>
+            <button class="knw_mre">Know More</button>
+            <div class="image_box">
+                <img src="	https://static.naukimg.com/s/5/114/i/loginFormImage.png" alt="">
+            </div>
+        </div>
+        <div id="_f_s_right">
+            <div id="rght_top">
+                <p>Sales Enquiry</p>
+                <p>Login/Register</p>
+            </div>
+            <p>I am looking for</p>
+            <div id="radio_btns">
+                <label for=""><input type="radio" name="Recruitment Solutions" id="r_soln">Recruitment Solutions</label>
+                <label for=""><input type="radio" name="Job Opportunities" id="j_opnty">Job Opportunities</label>
+            </div>
+            <div id="inputfield">
+                <input type="text" id="name" placeholder="name">
+                <input type="text" id="company_name" placeholder="Company name">
+                <input type="tel" id="contact" placeholder="contact number">
+                <input type="text" id="designation_name" placeholder="designation name">
+                <input type="email" id="mail_Id" placeholder="Email id">
+                <input type="text" id="city" placeholder="city">
+            </div>
+            <div id="captcha">
+                <label> <input type="checkbox" name="" id="captcha_box">
+                    i'm not a robot</label>
+                <img src="https://www.gstatic.com/recaptcha/api2/logo_48.png" alt="">
+            </div>
+            <button id="clback">
+                Get a callback
+            </button>
+        </div>
+    </section>
 </body>
+<script src="./src/employee.js" type="module"></script>
 
 </html>
