--- a/employers.html
+++ b/employers.html
@@ -45,7 +45,7 @@
                         <li>Branding Solutions</li>
                     </ul>
                 </div>
-              
+
             </div>
             <div id="_nav_right">
                 <div id="tollfree">
@@ -132,23 +132,139 @@
                 <label for=""><input type="radio" name="Job Opportunities" id="j_opnty">Job Opportunities</label>
             </div>
             <div id="inputfield">
-                <input type="text" id="name" placeholder="name">
-                <input type="text" id="company_name" placeholder="Company name">
-                <input type="tel" id="contact" placeholder="contact number">
-                <input type="text" id="designation_name" placeholder="designation name">
-                <input type="email" id="mail_Id" placeholder="Email id">
-                <input type="text" id="city" placeholder="city">
+                <!-- import from export file -->
             </div>
-            <div id="captcha">
-                <label> <input type="checkbox" name="" id="captcha_box">
-                    i'm not a robot</label>
-                <img src="https://www.gstatic.com/recaptcha/api2/logo_48.png" alt="">
+            <div id="captcha_sec">
+                <!-- import from export file -->
             </div>
             <button id="clback">
                 Get a callback
             </button>
         </div>
     </section>
+    <!-- section two -->
+    <section class="_sec secend">
+        <img src="./image/sec second.jpg" alt="">
+    </section>
+    <!-- section third -->
+    <section class="_sec third">
+        <img src="./image/secthird.jpg" alt="">
+    </section>
+
+
+    <!-- three card section  -->
+    <div id="card_section">
+        <div class="card">
+            <h3 class="card_hd">
+                Recruitment Management System
+            </h3>
+            <p class="card_desc">
+                Evolve to the new way of hiring with the suite of Naukri RMS cloud based products.
+            </p>
+            <p class="card_btn">
+                Know more
+                <img src="	https://static.naukimg.com/s/5/114/i/arrow_right.png" alt="">
+            </p>
+        </div>
+        <div class="card">
+            <h3 class="card_hd">
+                Referral
+                Solutions
+            </h3>
+            <p class="card_desc">
+                Hire talent from your network with Naukri’s referral solutions.
+            </p>
+            <p class="card_btn">
+                Know more
+                <img src="	https://static.naukimg.com/s/5/114/i/arrow_right.png" alt="">
+            </p>
+        </div>
+        <div class="card">
+            <h3 class="card_hd">
+                Branding
+                Solutions
+            </h3>
+            <p class="card_desc">
+                Build your brand amongst jobseekers with high visibility on naukri.com
+            </p>
+            <p class="card_btn">
+                Know more
+                <img src="	https://static.naukimg.com/s/5/114/i/arrow_right.png" alt="">
+            </p>
+        </div>
+    </div>
+
+    <!-- Mobile app download description section -->
+    <section class="_sec appDwnld">
+        <img src="./image/appsec.jpg" alt="">
+    </section>
+
+    <!-- Success stories -->
+    <section class="_sec succ_story">
+        <img src="./image/success_story.jpg" alt="">
+    </section>
+    <!-- blog post section  -->
+    <section class="_sec blog_post"></section>
+
+    <!-- companies logo section  -->
+    <section class="_sec comp_logo">
+        <div id="logo_cont">
+            <div>
+                <img src="https://static.naukimg.com/s/5/114/i/client_fortis.png" alt="">
+            </div>
+            <div>
+                <img src="https://static.naukimg.com/s/5/114/i/client_tesco.png" alt="">
+            </div>
+            <div>
+                <img src="	https://static.naukimg.com/s/5/114/i/client_wipro.png" alt="">
+            </div>
+            <div>
+                <img src="	https://static.naukimg.com/s/5/114/i/client_amazon.png" alt="">
+            </div>
+            <div>
+                <img src="https://static.naukimg.com/s/5/114/i/client_itc.png" alt="">
+            </div>
+            <div>
+                <img src="	https://static.naukimg.com/s/5/114/i/client_reliance.png" alt="">
+            </div>
+            <div>
+                <img src="	https://static.naukimg.com/s/5/114/i/client_infosys.png" alt="">
+            </div>
+            <div>
+                <img src="	https://static.naukimg.com/s/5/114/i/client_tata.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- Footer section of the webpage -->
+    <footer>
+        <div id="foot_container">
+            <div id="foot_first">
+                <img src="./image/footerimg.jpg" alt="">
+            </div>
+            <div id="foot_secend">
+                <h4>Sales Enquiry</h4>
+                <p>I am looking for</p>
+                <div id="radio_btns">
+                    <label for=""><input type="radio" name="Recruitment Solutions" id="r_soln">Recruitment
+                        Solutions</label>
+                    <label for=""><input type="radio" name="Job Opportunities" id="j_opnty">Job Opportunities</label>
+                </div>
+                <div class="inputs" id="footer_form">
+                    <!-- import content goes here  -->
+                </div>
+                <div id="captcha_sec2">
+
+                </div>
+                <button id="clback2">
+                    Get a callback
+                </button>
+            </div>
+        </div>
+        <div id="copy_right">
+            <p>Contact Us | Report a problem</p>
+            <p>All rights reserved © 2022 Info Edge India Ltd.</p>
+        </div>
+    </footer>
 </body>
 <script src="./src/employee.js" type="module"></script>
 
