--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preload" as="image" href="https://static.naukimg.com/s/4/100/i/naukri_Logo.png">
     <title>Login</title>
+    <link rel="shortcut icon" href="./image/naukriLogoIcon200.png">
     <link rel="stylesheet" href="./style/navbar.css">
     <link rel="stylesheet" href="./style/login.css">
 </head>
