--- a/employers.html
+++ b/employers.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recruiters</title>
+    <link rel="shortcut icon" href="./image/naukriLogoIcon200.png">
     <link rel="stylesheet" href="./style/employer.css">
 </head>
 
