--- a/Job/browse-jobs.html
+++ b/Job/browse-jobs.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> Browse Jobs by Company, Location, Skills, Designation & Industry - Naukri.com </title>
+    <link rel="shortcut icon" href="https://static.naukri.com/s/4/100/i/naukriLogoIcon200.png">
     <link rel="stylesheet" href="browse-jobs.css" />
     <script
       src="https://kit.fontawesome.com/d5d0d8bb45.js"
@@ -341,7 +342,7 @@
         onclick="window.location.href='jobs.html'"
         id="a1"
         href=""
-        style="text-decoration: none; color: aqua;"
+        style="text-decoration: none;"
         
         >View All Companies</a
       >
@@ -523,7 +524,7 @@
         <p>All rights reserved @ 2022 Info Edge (India) Ltd.</p>
       </div>
     </div>
-    <img src="Video-220721175503.gif" alt="Computer man" style="width: 1500px;height: 156px;">
+    <img src="icons\Video-220721175503.gif" alt="Computer man" style="width: 1500px;height: 156px;">
   </body>
   <script src="setFilters.js"></script>
 </html>
