--- a/Job/jobs-remote.html
+++ b/Job/jobs-remote.html
@@ -628,4 +628,8 @@
   <script src="jobs.js"></script>
   <script src="filters.js"></script>
   <script src="processFilters.js"></script>
+  <script>
+    renderData(filterByLocation(Jobs,'Remote'))
+    document.getElementById('filterKey').textContent='Remote'
+  </script>
 </html>
