--- a/login.html
+++ b/login.html
@@ -8,6 +8,7 @@
     <link rel="preload" as="image" href="https://static.naukimg.com/s/4/100/i/naukri_Logo.png">
     <title>Login</title>
     <link rel="shortcut icon" href="./image/naukriLogoIcon200.png">
+    <!-- <link rel="shortcut icon" href="https://static.naukri.com/s/4/100/i/naukriLogoIcon200.png"> -->
     <link rel="stylesheet" href="./style/navbar.css">
     <link rel="stylesheet" href="./style/login.css">
 </head>
