--- a/HomeNavbar/register.html
+++ b/HomeNavbar/register.html
@@ -144,7 +144,7 @@ p a{
     <div>
         <div id="regNav">
             <a href="index.html"><img src="https://static.naukimg.com/s/4/100/i/naukri_Logo.png" alt=""></a>
-            <p>Already Registered?<a href="login.html">Login</a></p>
+            <p>Already Registered?<a href="../login.html">Login</a></p>
          </div>
 
          <!-- 2nd div -->
