--- a/company.html
+++ b/company.html
@@ -192,7 +192,7 @@
                 <input id="email" type="text" placeholder="Enter Email-Id to Register"><br>
                 <input id="password" type="text" placeholder="Create Password">
                 <p id="terms and condition">I agree to all the <a href="https://www.naukri.com/termsconditions">Terms and Conditions</a></p>
-                <button><h1>Register Now</h1></button>
+                <button><h1 id="">Register Now</h1></button>
             </div>
         </div>
     </div>
