--- a/HomeNavbar/register.html
+++ b/HomeNavbar/register.html
@@ -182,6 +182,7 @@ p a{
             <label for="">Mobile number</label>
             <input type="text" id="mobile" name="idNumber" pattern="[0-9]{10}" placeholder="Enter 10-Digit Mobile Number" required>
             <input type="submit" value="Register Now" id="submit">
+            <!-- <p>By clicking Register, you agree to the Terms and Conditions & Privacy Policy of Naukri.com</p> -->
         </form>
 </div>
 </div>  
