--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
                 <img width="70px" src="./image/user.png" alt="">
             </div>
             <div>
-                <h3> Name Not Mentioned</h3>
+                <h3 id="user_name"> </h3>
                 <p>profile completed (complete all)</p>
                 <p>
                     <span></span>
