--- a/HomeNavbar/register.html
+++ b/HomeNavbar/register.html
@@ -204,7 +204,7 @@ let nagaraju=()=>{
     let output=new balayya(name,email,password,mobile);
     localStorage.setItem("userData",JSON.stringify(output));
     alert("Account Successful Registered!!");
-    window.location.href="signin.html";
+    window.location.href="./login.html";
 
 }
 document.querySelector("form").addEventListener("submit",nagaraju)
