--- a/company.html
+++ b/company.html
@@ -158,10 +158,10 @@
     <div id="Navbar">
         <img src="https://static.naukri.com/s/4/100/i/naukri_Logo.png" alt="not">
         <h3>JOBS</h3>
-        <h3>RECRUITERS</h3>
-        <h3>COMPANIES</h3>
+       <h3>RECRUITERS</h3>
+       <h3>COMPANIES</h3>
         <h3>TOOLS</h3>
-        <h3>SERVICES</h3>
+        <h3>SERVICES/h3>
         <h3>MORE</h3>
         <h3>LOGIN</h3>
     </div>
